<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gerberoid</string>

    <string name="action_settings">Settings</string>
    <string name="action_gerber">Load Gerber File</string>
    <string name="action_drill">Load EXCELLON Drill File</string>
    <string name="action_clear">Clear All</string>
    <string name="action_zoom_in">Zoom in</string>
    <string name="action_zoom_out">Zoom out</string>
    <string name="action_zoom_fit">Zoom auto (Home)</string>
    <string name="action_about">About Gerberoid</string>

    <string name="file_request_gerber">Open Gerber File</string>
    <string name="file_request_drill">Open Drill File</string>
    <string name="colors_dialog_title">Colors</string>

    <string name="no_more_empty_layers">No more empty available layers.\n
The remaining gerber files will not be loaded.</string>

    <string name="cancel">Cancel</string>

    <string name="show_grid">Show grid</string>
    <string name="hide_grid">Hide grid</string>
    <string name="spots_sketch">Show spots in sketch mode</string>
    <string name="lines_sketch">Show lines in sketch mode</string>
    <string name="poly_sketch">Show polygons in sketch mode</string>
    <string name="neg_ghost">Show negative objects in ghost color</string>
    <string name="show_dcode">Show dcode number</string>
    <string name="layers_mode_0">Show layers in raw mode</string>
    <string name="layers_mode_1">Show layers in stacked mode</string>
    <string name="layers_mode_2">Show layers in transparency mode</string>

    <string name="about_text">Gerberoid version %1$s
\n© 2017 Marcus Comstedt
\n
\nBased on GerbView 4.0.6, a part of the KiCad EDA Suite
\n© 1992-2015 KiCad Developers Team
\n
\nGerberoid is released under the GNU General Public License (GPL) version 3 or any later version
\n
\nhttps://github.com/zeldin/Gerberoid</string>

    <string name="action_archive">Archive</string>
    <string name="no_archive_data_found">No archive data found!</string>
    <string name="archive_title">Add Archive content</string>
    <string name="add_layers_title">Add Layers</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_title_file_not_loaded">Selected file could not be loaded!</string>
    <string name="dialog_ok">OK</string>

</resources>
