<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_settings_black_24px"
        android:title="@string/action_settings"/>
    <group>
        <item
            android:id="@+id/action_gerber"
            android:showAsAction="ifRoom"
            android:icon="@drawable/gerber_file"
            android:title="@string/action_gerber"/>
        <item
            android:id="@+id/action_drill"
            android:showAsAction="ifRoom"
            android:icon="@drawable/gerbview_drill_file"
            android:title="@string/action_drill"/>
    </group>
    <item
        android:id="@+id/action_clear"
        android:showAsAction="ifRoom"
        android:icon="@drawable/gerbview_clear_layers"
        android:title="@string/action_clear"/>
    <group>
        <item
            android:id="@+id/action_zoom_in"
            android:showAsAction="ifRoom"
            android:icon="@drawable/ic_zoom_in_black_24px"
            android:title="@string/action_zoom_in"/>
        <item
            android:id="@+id/action_zoom_out"
            android:showAsAction="ifRoom"
            android:icon="@drawable/ic_zoom_out_black_24px"
            android:title="@string/action_zoom_out"/>
        <item
            android:id="@+id/action_zoom_fit"
            android:showAsAction="ifRoom"
            android:icon="@drawable/fullscreen"
            android:title="@string/action_zoom_fit"/>
    </group>
    <item
        android:id="@+id/action_about"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_info_outline_black_24px"
        android:title="@string/action_about"/>
</menu>
