<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tools_drawer"
    android:layout_width="@dimen/tools_drawer_width"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:orientation="vertical"
    android:background="@color/tools_drawer_background"
    tools:context="se.pp.mc.android.Gerberoid.MainActivity"
    tools:showIn="@layout/activity_main">
	<LinearLayout
	    android:orientation="horizontal"
	    android:gravity="left|center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	    <ToggleButton
		android:id="@+id/opt_grid"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:drawableTop="@drawable/grid"
		android:textOn="@string/show_grid"
		android:textOff="@string/hide_grid"/>
	    <ImageButton
		android:id="@+id/grid_color"
		android:layout_width="@dimen/tools_drawer_color_button_size"
	        android:layout_height="@dimen/tools_drawer_color_button_size"
		android:padding="@dimen/tools_drawer_color_button_padding"
		android:cropToPadding="true"/>
	</LinearLayout>
	<ToggleButton
	    android:id="@+id/opt_padsketch"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:drawableTop="@drawable/pad_sketch"
	    android:textOn="@string/spots_sketch"
	    android:textOff="@string/spots_sketch"/>
	<ToggleButton
	    android:id="@+id/opt_linesketch"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:drawableTop="@drawable/showtrack"
	    android:textOn="@string/lines_sketch"
	    android:textOff="@string/lines_sketch"/>
	<ToggleButton
	    android:id="@+id/opt_polysketch"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:drawableTop="@drawable/opt_show_polygon"
	    android:textOn="@string/poly_sketch"
	    android:textOff="@string/poly_sketch"/>
	<LinearLayout
	    android:orientation="horizontal"
	    android:gravity="left|center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	    <ToggleButton
		android:id="@+id/opt_negghost"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:drawableTop="@drawable/gerbview_show_negative_objects"
		android:textOn="@string/neg_ghost"
		android:textOff="@string/neg_ghost"/>
	    <ImageButton
		android:id="@+id/ghost_color"
		android:layout_width="@dimen/tools_drawer_color_button_size"
	        android:layout_height="@dimen/tools_drawer_color_button_size"
		android:padding="@dimen/tools_drawer_color_button_padding"
		android:cropToPadding="true"/>
	</LinearLayout>
	<LinearLayout
	    android:orientation="horizontal"
	    android:gravity="left|center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	    <ToggleButton
	        android:id="@+id/opt_showdcode"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:drawableTop="@drawable/show_dcodenumber"
		android:textOn="@string/show_dcode"
		android:textOff="@string/show_dcode"/>
	    <ImageButton
		android:id="@+id/dcode_color"
		android:layout_width="@dimen/tools_drawer_color_button_size"
	        android:layout_height="@dimen/tools_drawer_color_button_size"
		android:padding="@dimen/tools_drawer_color_button_padding"
		android:cropToPadding="true"/>
	</LinearLayout>
	<RadioGroup
	    android:id="@+id/opt_layers_mode"
	    android:orientation="vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	    <ToggleButton
		android:id="@+id/opt_layers_mode_0"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:drawableTop="@drawable/gbr_select_mode0"
		android:textOn="@string/layers_mode_0"
		android:textOff="@string/layers_mode_0"/>
	    <ToggleButton
		android:id="@+id/opt_layers_mode_1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:drawableTop="@drawable/gbr_select_mode1"
		android:textOn="@string/layers_mode_1"
		android:textOff="@string/layers_mode_1"/>
	    <ToggleButton
		android:id="@+id/opt_layers_mode_2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:drawableTop="@drawable/gbr_select_mode2"
		android:textOn="@string/layers_mode_2"
		android:textOff="@string/layers_mode_2"/>
	</RadioGroup>
</LinearLayout>
